Refactor DistanceCalculator; simplify duration calculation by using getFirst() and getLast() methods for improved readability